--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
     "@ionic/react-router": "^7.0.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.6.8",
     "firebase": "^10.9.0",
+    "holidayapi": "^6.0.1",
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
+    "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-router": "^5.3.4",
-    "react-router-dom": "^5.3.4"
+    "react-router-dom": "^5.3.4",
+    "url-polyfill": "^1.1.12"
   },
   "devDependencies": {
     "@capacitor/cli": "5.7.4",
